results/SVCOMP/conversational/log-NullPointerException2-2024_03_14_19_01_14.txt
class A {
  int i;
}

class NullPointerException2 {
  //@ ensures \result <==> a == null || a.i != 0;
  public static boolean f() {
    A a = null;
    try {
      a.i = 0;
    } catch (NullPointerException exc) {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/NullPointerException2.java:6: error: cannot find symbol
  //@ ensures \result <==> a == null || a.i != 0;
                           ^
  symbol:   variable a
  location: class NullPointerException2
/home/max/Documents/JMLGPT/tmp/NullPointerException2.java:6: error: cannot find symbol
  //@ ensures \result <==> a == null || a.i != 0;
                                        ^
  symbol:   variable a
  location: class NullPointerException2
2 errors

class A {
  int i;
}

class NullPointerException2 {
  //@ ensures \result <==> a == null || a.i != 0;
  public static boolean f() {
    A a = null;
    try {
      a.i = 0;
    } catch (NullPointerException exc) {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/NullPointerException2.java:6: error: cannot find symbol
  //@ ensures \result <==> a == null || a.i != 0;
                           ^
  symbol:   variable a
  location: class NullPointerException2
/home/max/Documents/JMLGPT/tmp/NullPointerException2.java:6: error: cannot find symbol
  //@ ensures \result <==> a == null || a.i != 0;
                                        ^
  symbol:   variable a
  location: class NullPointerException2
2 errors

class A {
  int i;
}

class NullPointerException2 {
  //@ ensures \result <==> a == null || a.i != 0;
  public static boolean f() {
    A a = null;
    try {
      a.i = 0;
    } catch (NullPointerException exc) {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/NullPointerException2.java:6: error: cannot find symbol
  //@ ensures \result <==> a == null || a.i != 0;
                           ^
  symbol:   variable a
  location: class NullPointerException2
/home/max/Documents/JMLGPT/tmp/NullPointerException2.java:6: error: cannot find symbol
  //@ ensures \result <==> a == null || a.i != 0;
                                        ^
  symbol:   variable a
  location: class NullPointerException2
2 errors

class A {
  int i;
}

class NullPointerException2 {
  //@ ensures \result <==> exc != null;
  public static boolean f() {
    A a = null;
    try {
      a.i = 0;
    } catch (NullPointerException exc) {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/NullPointerException2.java:6: error: cannot find symbol
  //@ ensures \result <==> exc != null;
                           ^
  symbol:   variable exc
  location: class NullPointerException2
1 error

class A {
  int i;
}

class NullPointerException2 {
  //@ ensures \result <==> true;
  public static boolean f() {
    A a = null;
    try {
      a.i = 0;
    } catch (NullPointerException exc) {
      return false;
    }
    return true;
  }
}
